k8s-deploy/k8s/ingress/axon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: khalani-testnet
  namespace: axon
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
    nginx.ingress.kubernetes.io/cors-allow-methods: POST, GET, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: testnet.khalani.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: axon-chain
                port:
                  number: 8000
